use minio on teresa helm

--- a/helm/chart/teresa/templates/deployment.yaml
+++ b/helm/chart/teresa/templates/deployment.yaml
@@ -50,7 +50,10 @@ spec:
           value: /etc/teresa-keys/teresa.rsa.pub
         - name: TERESA_STORAGE_TYPE
           value: {{ .Values.storage.type }}
-        {{ if .Values.aws.s3.endpoint }}
+        {{- if .Values.useMinio }}
+        - name: TERESA_STORAGE_AWS_ENDPOINT
+          value: {{ template "minio.fullname" . }}          
+        {{- else if .Values.aws.s3.endpoint }}
         - name: TERESA_STORAGE_AWS_ENDPOINT
           value: {{ quote .Values.aws.s3.endpoint }}
         {{- end }}
@@ -61,15 +64,25 @@ spec:
         - name: TERESA_STORAGE_AWS_KEY
           valueFrom:
             secretKeyRef:
+              {{- if .Values.useMinio }}
+              name: {{ template "minio.fullname" . }}-user
+              key: accesskey
+              {{- else }}
               name: {{ template "fullname" . }}-aws
               key: access_key
-        - name: TERESA_STORAGE_AWS_REGION
-          value: {{ .Values.aws.region }}
+              {{- end }}
         - name: TERESA_STORAGE_AWS_SECRET
           valueFrom:
             secretKeyRef:
+              {{- if .Values.useMinio }}
+              name: {{ template "minio.fullname" . }}-user
+              key: secretkey
+              {{- else }}
               name: {{ template "fullname" . }}-aws
               key: secret_key
+              {{- end }}
+        - name: TERESA_STORAGE_AWS_REGION
+          value: {{ .Values.aws.region }}
         {{- if .Values.tls.crt }}
         - name: TERESA_SECRETS_TLS_CERT
           value: /etc/teresa/server.crt
